# Mnemos

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  REMOVE_OBSOLETE_FILES.txt  SECURITY.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml  render.yaml  ruff_remaining.txt  test_mnemos.db  test_mnemos.db-journal
.github/: pull_request_template.md
alembic/: env.py
docs/: FRONTEND_ARCHITECTURE.md  README.md  RELEASE_EVIDENCE.md  RESPONSIBLE_ENGINEERING.md  agent-runtime.md  architecture.md  data-model.md  deployment.md  ingestion.md  operations.md  public-demo.md  retrieval.md  security.md  testing-and-evaluation.md
frontend/: .env.example  .npmrc  README.md  middleware.js  next.config.mjs  package-lock.json  package.json  proxy.js  tailwind.config.js  vercel.json
mnemos-reranker/: .gitignore  Dockerfile  README.md  app.py  requirements.txt
scripts/: container-entrypoint.sh  seed.py
tests/: ai_layer_unit_test_results.txt  conftest.py  test_agent_runtime_contract.py  test_ai_response_quality.py  test_approval_scope.py  test_auth_registration.py  test_awaited_checkpoint_persistence.py  test_awaited_runtime_persistence.py  test_canonical_agent_runtime.py  test_document_extraction.py  test_documents.py  test_durable_approval_resume.py  test_fastapi_lifespan.py  test_frontend_neutral_ui.py  test_governed_agent_tool_use.py  test_health.py  test_no_synthetic_ingestion.py  test_optional_neo4j_startup.py  test_prompt_manager.py  test_public_demo_access.py  test_queries.py  test_release_hardening.py  (+8 more)
(+300 files in other folders)
