[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-backend"
version = "0.1.0"
description = "Backend platform for Mnemos industrial knowledge intelligence"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "aiosqlite>=0.21.0,<0.22.0",
  "alembic>=1.16.0,<2.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "httpx>=0.28.1,<0.29.0",
  "boto3>=1.39.0,<2.0.0",
  "redis>=6.2.0,<7.0.0",
  "orjson>=3.10.18,<4.0.0",
  "email-validator>=2.2.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<0.13.0",
  "mypy>=1.16.0,<2.0.0",
  "types-python-jose>=3.5.0.20250531",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501", "UP046", "UP047"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["alembic"]
